# portalocker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.rst  MANIFEST.in  README.rest  README.rst  appveyor.yml  lefthook.yml  msvcrt.pyi  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  sourcery.yaml  test_requirements.txt  tox.ini  tox.toml
.github/: dependabot.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: lint.yml  main.yml  python-package.yml  stale.yml
docs/: changelog.rst  conf.py  index.rst  portalocker.constants.rst  portalocker.exceptions.rst  portalocker.portalocker.rst  portalocker.redis.rst  portalocker.redis_lock.rst  portalocker.rst  portalocker.types.rst  portalocker.utils.rst  requirements.txt  tests.rst  usage.rst
docs/_theme/: flask_theme_support.py
portalocker/: __about__.py  __init__.py  __main__.py  constants.py  exceptions.py  metadata.py  portalocker.py  redis.py  types.py  utils.py
portalocker_tests/: conftest.py  mypy.ini  requirements.txt  temporary_file_lock.py  test_combined.py  test_core_locking.py  test_lock_flags.py  test_mechanisms.py  test_multiprocess.py  test_pidfilelock.py  test_redis.py  test_redis_random_sleep.py  test_rlock_behaviour.py  test_semaphore.py  test_temporary_file_lock.py  test_timeout_behaviour.py  test_version.py  tests.py
tests/: requirements.txt  test_file.txt  test_implementations.py  tests.py
