[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'setuptools-scm']

[project]
name = 'portalocker'
dynamic = ['version']
authors = [{ name = 'Rick van Hattem', email = 'wolph@wol.ph' }]
license = { text = 'BSD-3-Clause' }
description = 'Wraps the portalocker recipe for easy usage'
keywords = ['locking', 'locks', 'with', 'statement', 'windows', 'linux', 'unix']
readme = 'README.rst'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Development Status :: 6 - Mature',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: MS-DOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: SunOS/Solaris',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: IronPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation',
    'Programming Language :: Python',
    'Topic :: Education :: Testing',
    'Topic :: Office/Business',
    'Topic :: Other/Nonlisted Topic',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries',
    'Topic :: System :: Monitoring',
    'Typing :: Typed',
]
requires-python = '>=3.9'
dependencies = [
    'pywin32>=226; platform_system == "Windows"',
]

[project.urls]
bugs = 'https://github.com/wolph/portalocker/issues'
documentation = 'https://portalocker.readthedocs.io/en/latest/'
repository = 'https://github.com/wolph/portalocker/'

[project.optional-dependencies]
docs = ['sphinx>=1.7.1']
tests = [
    'pytest>=5.4.1',
    'pytest-cov>=2.8.1',
    'pytest-timeout>=2.1.0',
    'sphinx>=6.0.0',
    'pytest-mypy>=0.8.0',
    'types-redis',
    'redis',
    'pytest-rerunfailures>=15.0',
    "types-pywin32>=310.0.0.20250429",
    "coverage-conditional-plugin>=0.9.0",
]
redis = ['redis']

[tool.setuptools]
platforms = ['any']
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = 'portalocker.__about__.__version__' }

[tool.setuptools.packages.find]
include = ['portalocker']

[tool.setuptools.package-data]
portalocker = ['py.typed', 'msvcrt.pyi']

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.codespell]
skip = '*/htmlcov,./docs/_build,*.asc'

[tool.pyright]
pythonVersion = '3.9'
include = ['portalocker', 'portalocker_tests']
exclude = ['dist/*']
strict = ['portalocker']

[tool.mypy]
python_version = '3.9'
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
packages = ['portalocker', 'portalocker_tests']
ignore_missing_imports = true
check_untyped_defs = true
exclude = ['dist', 'docs', '.venv', 'venv']
enable_error_code = ['ignore-without-code', 'truthy-bool', 'redundant-expr']
warn_unreachable = true

[[tool.mypy.overrides]]
module = ['portalocker_tests.*']
disallow_untyped_defs = false

[dependency-groups]
dev = [
    'portalocker[tests]',
    "basedmypy>=2.10.0",
    "basedpyright>=1.29.1",
    "tox>=4.26.0",
    "mypy>=1.15.0",
    "pyright>=1.1.401",
]

[tool.ruff]
src = ['portalocker', 'portalocker_tests']
include = ['portalocker/**/*.py', 'portalocker_tests/**/*.py']

[tool.repo-review]
ignore = [
    'PY004', # no /docs
    'PY007', # tox configured in tox.toml
    'PP301', # pytest is irrelevant
    'PC111', # no blacken-docs because markdown has no code
    'PC140', # manual typecheck pre-commit hooks
    'PC170', # no pygrep-hooks because no rST
    'RTD',   # no RTD
    'PY005',  # Tests folder is not named tests
]

[tool.coverage.run]
plugins = ['coverage_conditional_plugin']
branch = true
source = ['portalocker', 'portalocker_tests']

[tool.coverage.report]
ignore_errors = true
fail_under = 100
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'if typing.TYPE_CHECKING',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'typing.Protocol',
]
omit = [
    'portalocker/redis.py',
]

[tool.coverage.coverage_conditional_plugin.rules]
nt = 'os_name == "nt"'
not-nt = 'os_name != "nt"'
posix = 'os_name == "posix"'
not-posix = 'os_name != "posix"'

[tool.pytest.ini_options]
python_files = [
    'portalocker_tests/*.py',
]

addopts = '''
    --ignore setup.py
    --ignore portalocker/_*.py
    --doctest-modules
    --cov portalocker
    --cov-report term-missing
'''

timeout = 20
